# denser

./: .gitignore  LICENSE  README copy.md  README.md  installation.sh  pyproject.toml
denser/configs/: method_config.py
denser/data/datamanagers/: ubix_datamanager.py
denser/data/dataparsers/: ubix_kitti_dataparser.py
denser/data/datasets/: ubix_dataset.py
denser/data/utils/: data_utils.py  log.txt  objects.py
denser/model_components/: losses.py
denser/models/: scene_model.py  splatfacto.py
denser/scripts/: eval.py  render.py
denser/utils/: eval_utils.py  scene_model_helpers.py
